RESOLVED FIXED277113
Dynamic viewport expansion heuristic does not work on bigfishgames.com
https://bugs.webkit.org/show_bug.cgi?id=277113
Summary Dynamic viewport expansion heuristic does not work on bigfishgames.com
Wenson Hsieh
Reported 2024-07-25 18:24:41 PDT
Attachments
Wenson Hsieh
Comment 1 2024-07-25 18:37:22 PDT
EWS
Comment 2 2024-07-26 08:25:34 PDT
Committed 281403@main (0a5b0aa9a91f): <https://commits.webkit.org/281403@main> Reviewed commits have been landed. Closing PR #31258 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.