Dynamic viewport expansion heuristic does not work on bigfishgames.com https://bugs.webkit.org/show_bug.cgi?id=277113 rdar://128572358

Reviewed by Richard Robinson.

Adjust the viewport height expansion heuristic once again, so that we trigger an update whenever a
fixed-position container finishes animating. Additionally, add logic to throttle these updates to
a maximum of one every ~200 ms, to prevent websites with constantly-running animations from either
(1) indefinitely deferring updates, or (2) triggering constant and frequent updates.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didCommitLoad):
(WebKit::WebPage::didAddOrRemoveViewportConstrainedObjects):

Move this logic into a common helper method, `scheduleLayoutViewportHeightExpansionUpdate`.

* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::completeSyntheticClick):

Also, schedule an update whenever synthetic click events are dispatched (i.e. user taps the screen).

(WebKit::WebPage::scheduleLayoutViewportHeightExpansionUpdate):
(WebKit::WebPage::updateLayoutViewportHeightExpansionTimerFired):
(WebKit::WebPage::animationDidFinishForElement):
(WebKit::WebPage::scheduleEditorStateUpdateAfterAnimationIfNeeded):

Pull this existing logic for scheduling an EditorState update after completing an animation out into
a separate helper method.

Canonical link: https://commits.webkit.org/281403@main